Modified the social links

--- a/index.html
+++ b/index.html
@@ -90,10 +90,12 @@
             <button type="button" class="cta-btn">Say Hello</button>
         </div>
         <div class="socials">
-            <i class="fa-brands fa-linkedin-in"><a href="https://www.linkedin.com/in/insha-ramin/" target="_blank" rel="noopener noreferrer"></a></i>
-            <i class="fa-solid fa-x"> <a href="https://x.com/Insharamin" target="_blank" rel="noopener noreferrer"></a></i>
-            <i class="fa-brands fa-github"><a href="https://github.com/Insharamin1" target="_blank" rel="noopener noreferrer"></a></i>
-            <i class="fa-brands fa-hashnode"><a href="https://inshaweb.hashnode.dev/" target="_blank" rel="noopener noreferrer"></a></i>
+                <a href="https://www.linkedin.com/in/insha-ramin/" target="_blank" rel="noopener noreferrer">
+                    <i class="fa-brands fa-linkedin-in"></i>
+                </a>
+            <a href="https://x.com/Insharamin" target="_blank" rel="noopener noreferrer"><i class="fa-solid fa-x"></i></a>
+            <a href="https://github.com/Insharamin1" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-github"></i></a>
+            <a href="https://inshaweb.hashnode.dev/" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-hashnode"></i></a>
         </div>
     </div>
 </body>
